# like

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  SystemContext.go  WORKSPACE  bazel-bin  bazel-like  bazel-out  bazel-testlogs  deps.bzl  ginkgo.bzl  go.mod  go.sum  main.go  sonar-project.properties  tech.md
.github/workflows/: build.yml  go.yml
code/: BUILD.bazel  Interpreter.go
expressions/: BUILD.bazel  Context.go  Expression.go  System.go
grammar/: Assign.go  BUILD.bazel  Block.go  Call.go  Condition.go  Context.go  Each.go  Expression.go  ExpressionList.go  Expressions.go  IdentifierList.go  Include.go  IndexedAccess.go  Interpreter.go  Invoke.go  Lambda.go  Literal.go  LiteralList.go  Member.go  MemberList.go  Not.go  ParsedString.go  Pointer.go  Reference.go  StoreAccess.go  System.go  Value.go  Write.go  funcs.go  ginkgo.report  grammar.go  grammar_expression.go  grammar_func.go  grammar_test.go  grammar_types.go  like.gram  like.peggy  parser.go
grammar/doc/: common.txt
grammar/shell/: Invoke.go
grammar/tests/: BUILD.bazel  TestSystem_test.go  assign_test.go  comments_test.go  common_test.go  expression_test.go  general_test.go  grammar_test.go  lists_test.go  literal_test.go  logic_test.go  sample_test.go
grammar/tests/common/: BUILD.bazel  TestSystem.go  common.go
grammar/tests/doc/: tf.txt
grammar/tests/samples/: assigns.like  execute.like  funcs.like  include_test.like  lambda_invoke.like  lambda_invoke_space.like  loop.like  sample.like  simple_template.like  simple_template_assign.like  template.like
grammar/tests/samples/tt/: sample4.like
internal/doc/: common.like  common.txt
internal/grammar/: Add.go  Assign.go  AssignParse.go  BUILD.bazel  Block.go  BuiltIn.go  Call.go  Condition.go  Constant.go  Context.go  Each.go  Equal.go  EvaluatePipeout.go  Expression.go  ExpressionList.go  Expressions.go  FormatData.go  IdentifierList.go  Include.go  Interpreter.go  Invoke.go  Lambda.go  LikeError.go  Literal.go  LiteralList.go  Member.go  NamedExpressionList.go  Not.go  OutputCapture.go  ParseData.go  ParsedString.go  Pipe.go  PipeAppend.go  PipeIn.go  PipeOut.go  Piped.go  Pointer.go  Ref.go  Reference.go  Store.go  (+9 more)
internal/grammar/common/: BUILD.bazel  Builtin.go  Context.go  LikeError.go  Store.go  Stringify.go  System.go  SystemContext.go
internal/grammar/formatters/: BUILD.bazel  DataFormatter.go  EnvFormatter.go  Formatters.go  JsonFormatter.go  YamlFormatter.go
internal/grammar/parsers/: BUILD.bazel  DataParser.go  EnvParser.go  JsonParser.go  Parsers.go  YamlParser.go
internal/tests/: BUILD.bazel  assign_test.go  comments_test.go  evaluate_test.go  expression_test.go  general_test.go  grammar_test.go  lists_test.go  literal_test.go  logic_test.go  precedence_test.go  sample_test.go  shell_test.go  stderr_test.go  string_content_test.go
internal/tests/common/: BUILD.bazel  TestSystem.go  common.go
internal/tests/samples/: addressing.like  assigment_super.like  assigns.like  bom.like  code-in-template.like  conditions.like  conditions2.like  docker.like  docker2.like  docker3.like  env_format.like  env_parse.like  error.like  esc-codes.like  escaping.like  exec.like  exec_arg.like  execute.like  expressions-array.like  extra_capture.like  faked-pipes.like  faked-pipes2.like  file.like  func.like  global_lambda.like  global_lambda2.like  include_test.like  indexes.like  interpolation.like  json_format.like  json_parse.like  json_parse_file.like  lambda_addressing.like  lambda_arg_lambda.like  lambda_args.like  lambda_binded.like  lambda_context.like  lambda_exec.like  lambda_invoke.like  lambda_invoke_space.like  (+35 more)
