load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")

nogo(
    name = "lint",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix like
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "like_lib",
    srcs = ["main.go"],
    importpath = "like",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "like",
    embed = [":like_lib"],
    visibility = ["//visibility:public"],
)
