load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

# bazel test //... --test_output=all --test_arg=--ginkgo.focus --test_arg='Sample T' --test_arg=--ginkgo.v

nogo(
    name = "lint",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/beysed/like
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "like_lib",
    srcs = [
        "SystemContext.go",
        "main.go",
    ],
    importpath = "github.com/beysed/like",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/grammar",
        "//internal/grammar/common",
        "//internal/grammar/parsers",
    ],
)

go_binary(
    name = "like",
    embed = [":like_lib"],
    visibility = ["//visibility:public"],
)
