#bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

#go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
#go_sdk.download(version = "1.22")

#go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
#go_deps.from_file(go_mod = "//:go.mod")
#use_repo(go_deps)