load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grammar",
    srcs = [
        "Assign.go",
        "Call.go",
        "Context.go",
        "Expression.go",
        "Include.go",
        "Literal.go",
        "Member.go",
        "System.go",
        "Value.go",
        "grammar.go",
        "grammar_func.go",
        "parser.go",
    ],
    importpath = "like/grammar",
    visibility = ["//visibility:public"],
    deps = ["@com_github_samber_lo//:go_default_library"],
)
