load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grammar",
    srcs = [
        "Assign.go",
        "Call.go",
        "Context.go",
        "Expression.go",
        "Include.go",
        "Interpreter.go",
        "Invoke.go",
        "Lambda.go",
        "Literal.go",
        "LiteralList.go",
        "Member.go",
        "System.go",
        "Write.go",
        "funcs.go",
        "grammar.go",
        "parser.go",
    ],
    importpath = "like/grammar",
    visibility = ["//visibility:public"],
    deps = ["@com_github_samber_lo//:go_default_library"],
)
