load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grammar",
    srcs = [
        "Assign.go",
        "Block.go",
        "Call.go",
        "Condition.go",
        "Context.go",
        "Each.go",
        "Equal.go",
        "Expression.go",
        "ExpressionList.go",
        "Expressions.go",
        "IdentifierList.go",
        "Include.go",
        "Interpreter.go",
        "Invoke.go",
        "Lambda.go",
        "LikeError.go",
        "Literal.go",
        "LiteralList.go",
        "Member.go",
        "Not.go",
        "ParsedString.go",
        "Pointer.go",
        "Reference.go",
        "StoreAccess.go",
        "System.go",
        "Write.go",
        "funcs.go",
        "grammar.go",
        "parser.go",
    ],
    importpath = "like/grammar",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_beysed_shell//execute:go_default_library",
        "@com_github_samber_lo//:go_default_library",
    ],
)
