load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "samples",
    srcs = glob(["samples/**"]),
    visibility = ["//visibility:public"],
)

go_test(
    name = "tests_test",
    timeout = "short",
    srcs = [
        "assign_test.go",
        "comments_test.go",
        "expression_test.go",
        "general_test.go",
        "grammar_test.go",
        "literal_test.go",
        "sample_test.go",
    ],
    args = [
        "--ginkgo.no-color",
        "--ginkgo.json-report",
        "tests_test.json"
    ],
    data = [":samples"],
    deps = [
        "//grammar",
        "//grammar/tests/common",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
