load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grammar",
    srcs = [
        "Assign.go",
        "Block.go",
        "BuiltIn.go",
        "Call.go",
        "Condition.go",
        "Constant.go",
        "Context.go",
        "Each.go",
        "Equal.go",
        "Expression.go",
        "ExpressionList.go",
        "Expressions.go",
        "FormatData.go",
        "IdentifierList.go",
        "Include.go",
        "Interpreter.go",
        "Invoke.go",
        "Lambda.go",
        "Literal.go",
        "LiteralList.go",
        "Member.go",
        "Not.go",
        "ParseData.go",
        "ParsedString.go",
        "Pointer.go",
        "Reference.go",
        "StoreAccess.go",
        "Template.go",
        "Write.go",
        "funcs.go",
        "grammar.go",
        "parser.go",
    ],
    importpath = "github.com/beysed/like/internal/grammar",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/grammar/common",
        "//internal/grammar/formatters",
        "//internal/grammar/parsers",
        "@com_github_beysed_shell//execute:go_default_library",
        "@com_github_samber_lo//:go_default_library",
    ],
)
