load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grammar",
    srcs = [
        "Add.go",
        "Assign.go",
        "Block.go",
        "BuiltIn.go",
        "Call.go",
        "Condition.go",
        "Constant.go",
        "Context.go",
        "Each.go",
        "Equal.go",
        "EvaluatePipeout.go",
        "Expression.go",
        "ExpressionList.go",
        "Expressions.go",
        "FormatData.go",
        "IdentifierList.go",
        "Include.go",
        "Interpreter.go",
        "Invoke.go",
        "Lambda.go",
        "Literal.go",
        "Member.go",
        "NamedExpressionList.go",
        "Not.go",
        "OutputCapture.go",
        "ParseData.go",
        "ParsedString.go",
        "Pipe.go",
        "PipeAppend.go",
        "PipeIn.go",
        "PipeOut.go",
        "Piped.go",
        "Ref.go",
        "Reference.go",
        "Store.go",
        "StoreAccess.go",
        "Template.go",
        "Unwrap.go",
        "Write.go",
        "funcs.go",
        "grammar.go",
        "parser.go",
    ],
    importpath = "github.com/beysed/like/internal/grammar",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/grammar/common",
        "//internal/grammar/formatters",
        "//internal/grammar/parsers",
        "@com_github_samber_lo//:go_default_library",
        "@com_github_zeroflucs_given_generics//collections/stack:go_default_library",
    ],
)
