load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "parsers",
    srcs = [
        "DataParser.go",
        "EnvParser.go",
        "JsonParser.go",
        "Parsers.go",
        "YamlParser.go",
    ],
    importpath = "github.com/beysed/like/internal/grammar/parsers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/grammar/common",
        "@com_github_samber_lo//:go_default_library",
        "@com_github_valyala_fastjson//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)
