load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = [
        "TestSystem.go",
        "common.go",
    ],
    importpath = "github.com/beysed/like/internal/tests/common",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/grammar",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)
